Prevent modal width shifts based on content size

--- a/app/javascript/mastodon/features/annual_report/shared_page.module.scss
+++ b/app/javascript/mastodon/features/annual_report/shared_page.module.scss
@@ -1,7 +1,8 @@
 $mobile-breakpoint: 540px;
 
 .wrapper {
-  max-width: max-content;
+  box-sizing: border-box;
+  max-width: 600px;
   margin-inline: auto;
   padding: 40px 10px;
 
